syntax = "proto3";
package gibson.plugin;
option go_package = "github.com/zero-day-ai/sdk/api/gen/proto";

import "common.proto";

service PluginService {
    rpc Initialize(PluginInitializeRequest) returns (PluginInitializeResponse);
    rpc Shutdown(PluginShutdownRequest) returns (PluginShutdownResponse);
    rpc ListMethods(PluginListMethodsRequest) returns (PluginListMethodsResponse);
    rpc Query(PluginQueryRequest) returns (PluginQueryResponse);
    rpc Health(PluginHealthRequest) returns (gibson.common.HealthStatus);
}

message PluginInitializeRequest {
    string config_json = 1;
}

message PluginInitializeResponse {
    gibson.common.Error error = 1;
}

message PluginShutdownRequest {}
message PluginShutdownResponse {
    gibson.common.Error error = 1;
}

message PluginMethodDescriptor {
    string name = 1;
    string description = 2;
    gibson.common.JSONSchema input_schema = 3;
    gibson.common.JSONSchema output_schema = 4;
}

message PluginListMethodsRequest {}
message PluginListMethodsResponse {
    repeated PluginMethodDescriptor methods = 1;
}

message PluginQueryRequest {
    string method = 1;
    string params_json = 2;
    int64 timeout_ms = 3;
}

message PluginQueryResponse {
    string result_json = 1;
    gibson.common.Error error = 2;
}

message PluginHealthRequest {}
